# Platform

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.bye  Makefile.old  README  README.md  all.sh  build.mk  build.sh  clean.sh  config.mk  configure.mk  configure.sh  deconfigure.sh  emulate.sh  i686.sh  image.sh  just-save-it.txt  x86_64.sh
arch/: CMakeLists.foo  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  config.mk  configure.sh  deconfigure.sh  emulate.sh  image.sh
arch/cmake/: i386.toolchain.cmake
arch/i386/: CMakeLists.foo  CMakeLists.txt  all.sh  build.mk  build.sh  clean.sh  configure.sh  deconfigure.sh  emulate.mk  emulate.sh  image.mk  image.sh  toolchain.cmake
arch/i386/bios/: CMakeLists.txt
arch/i386/bios-bootloader/: README  all.sh  build.sh  configure.py  configure.sh  deconfigure.sh  index.sogb  linker.ld
arch/i386/bios/bootloader/: CMakeLists.txt  build.py  def.h  generate.py  script.ld
arch/i386/bios/bootloader/include/: CMakeLists.foo  test.c
arch/i386/bios/bootloader/pm/: CMakeLists.foo  lifecycle.c  lifecycle.h  pm.c  ptr.c  util.c  util.h  vbe.c  vbe.h
arch/i386/bios/bootloader/rm/: CMakeLists.foo  bootstrap.asm  main.c  main.h
arch/i386/bootlibc/: README  index.mk  test.c  test.h
arch/i386/bootmbr/: Makefile  README.md  bootable.asm  bootstrap.asm  bootstrap.h  build.mk  dap.h  gdt.c  gdt.h  index.mk  iso9660.h  linker.ld  ptr.c  ptr.h  ssgfs.c  ssgfs.h
arch/i386/cmake/: efi.toolchain.cmake  elf32.toolchain.cmake
arch/i386/dd/: README  device.h
arch/i386/fsd/: README  iso9660.c  iso9660.h
arch/i386/kernel/: Makefile  build.mk  build.sh  clean.sh  configure.py  configure.sh
arch/x86/: Makefile  README.md  config.mk
arch/x86/boot/: Makefile  README.md  a20.asm  bsec.asm  config.mk  index.mk  linker.ld  nmi.asm  pm.asm  pm.h  print.h  t.mk
arch/x86/include/: ioport.h
arch/x86/installer/: Makefile  config.mk
arch/x86/kernel/: Makefile  config.mk  start.asm  test.c
arch/x86/libb/: abort.S  config.mk
arch/x86/libk/: config.mk
arch/x86/shared/: config.mk  interrupt.asm
arch/x86old/boot/: Makefile  bsec.asm  gdt.asm  main.c  main.h  mmap.asm  mmap.c  mmap.h  msec.asm  msec.h  nmi.h  print.c  tscript.sh  vbe.h
arch/x86old/cpu/: index.mk  register.c
arch/x86old/include/: interrupt.h
arch/x86old/kernel/: OldMakefile  index.mk  link.ld
arch/x86old/shared/: ioport.asm
arch/x86old2/boot/: README.md  config.mk
arch/x86old2/installer/: README.md
arch/x86old2/kernel/: Makefile  README.md  config.mk
arch/x86old2/libb/: stdlib.h
arch/x86old2/libk/: abort.c  stdlib.h
boot/x86/estage/: README.md
boot/x86/lmstage/: README.md
boot/x86/lstage/: README.md
boot/x86/pmstage/: README.md
boot/x86/pstage/: README.md
boot/x86/rmstage/: Makefile  README.md  start.nasm
boot/x86/rstage/: README.md
bootloader/: README.md  bootloader.asm  bootloader.c  bootloader.h  build.sh  i686.sh  launch.sh
bootloader/bios/: Makefile  README.md  i686.ld  i686.sh  include.sh  linker.ld
bootloader/src/asm/: a20.asm  bootloader.asm  early.asm  gdt.asm
bootloader/src/c/: bios.c  bootloader.c  bootloader.h  dap.c  dap.h  iso9660.c
bootloader/uefi/: README.md
cdk/: README.md
cdk/deflib/: README.md
cmake/: configure.cmake
docs/: SUMMARY.md
docs/brief/: components.md
elevator/include/: emain.c
hardware/: CMakeLists.txt
hardware/bootloader/: CMakeLists.txt
hardware/bootloader/bios/: CMakeLists.txt  Makefile  README.md
hardware/bootloader/bios/intel64/: CMakeLists.foo
hardware/bootloader/bios/sources/: CMakeLists.txt
hardware/bootloader/bios/sources/amd64/: pmode.asm  pmode.c  pmode.h  rga.asm  rga.h  rmode.asm  rmode.c  rmode.h  start.asm  vbe.asm  vbe.h
hardware/bootloader/bios/sources/intel64/: CMakeLists.foo  CMakeLists.txt  linker.ld
hardware/bootloader/bios/sources/shared/: CMakeLists.foo  CMakeLists.txt  asm.c  asm.h  build.h  config.h  debug.h  gdt.asm  lifecycle.c  lifecycle.h  pmode.asm  pmode.c  pmode.h  start.asm  vbe.asm  vbe.c  vbe.h
hardware/bootloader/bios/sources/shared/pm/: CMakeLists.txt  pm.asm  pm.h  ptr.h  util.h  vbe.asm
hardware/bootloader/bios/sources/shared/rm/: CMakeLists.txt  a20.asm  boot.asm  io.asm  main.asm  main.c
hardware/bootloader/uefi/: README.md
hardware/kernel/: Makefile
hdk/: CMakeLists.txt  README.md
hdk/kmdf/: README.md
include/: itype.h
include/libc/: stdbool.h
include/misc/: types.h
includeold/: btype.h  ftype.h  ptype.h  utype.h
includeold/misc/: types.c
includeold/uefi/: types.h
kernel/: Makefile  README.md  i686.sh  x86_64.ld  x86_64.sh
kernel/include/shared/: gdt.asm  gdt.c  gdt.h  idt.h  interrupt.h  kernel.c
kernel/src/asm/: gdt.asm  idt.asm
kernel/src/c/: gdt.c  gdt.h  idt.c  idt.h  kernel.c  kernel.h
kernel/src/intel64/: Makefile  default.ld
sdk/: README.md
shared/boot/include/: string.h
shared/include/: elf32.h  types.h
shared/kernlibc/: README
shared/kernlibcpp/: README
shared/libc/: README
shared/libcpp/: README
shared/soglib/include/: sogbool.h  sogint.h
tools/assembler/: .gitignore  Makefile  architecture.h  assembler  context.h  index.mk  main.c  main.h  options.c  options.h  pch.h  preprocessor.h  x86.c  x86.h
x86/: Makefile  README.md
x86/boot/: Makefile  README  README.md  a20.nasm  boot.c  boot.h  boot.nasm  bootable.nasm  config.mk  gdt.nasm  header.nasm  index.mk  interrupt.nasm  link.ld  main.c  platform.mk  stack.nasm  toolkit.mk
x86/boot/gpt/: gpt.ld  gpt_header.nasm  index.mk  link.ld  pmbr.nasm
x86/boot/mbr/: Makefile  README.md  a20.h  balloc.h  boot.h  enjoy.h  gdt.h  header.nasm  ic8042.h  index.mk  io.h  link.ld  (+1 more)
x86/boot2/: Makefile
x86/injector/: Makefile  index.mk  link.ld  platform.mk  toolkit.mk
x86/kernel/: Makefile  index.mk
x86/oldboot/: interrupt.h  nmi.nasm  wtf.ld
x86n/boot/: Makefile  temp.c
x86old/: Makefile  configure.mk  toolkit.mk
x86old/injector/: bootable.nasm  mbr.nasm  testbootable.nasm
x86old/kernel/: header.nasm  link.ld  project.mk
x86old/oldboot/: Makefile  header.nasm  index.mk  link.ld  main.c  main.h  pm.nasm
(+174 files in other folders)
